# pit

./: .gitignore  README.md  flake.nix  old-README.md  pyproject.toml
git-py/: libgit.py  main.py
pit/: libdiff.py  libgit.py  libpack.py  main.py  old-libgit.py
