[tool.poetry]
name = "git-py"
version = "0.1.0"
description = ""
authors = ["Guangchu Shi <rollschild@protonmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "git-py" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
git-py = "git-py.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
