[tool.poetry]
name = "pit"
version = "0.1.0"
description = ""
authors = ["Guangchu Shi <rollschild@protonmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { include = "pit" }
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
pit = "pit.main:main"
diff = "pit.libdiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
